@@ -3,6 +3,8 @@ Version 1.6.7
 - BUG: Memory leak in SubWCRevCOM. (Stefan)
 - BUG: The copy-from url in the Check-for-modifications Dialog
        was wrong for single files. (Stefan)
+- BUG: SubWCRevCOM could only be used by one single application
+       at a time. (Stefan)
 
 Version 1.6.6
 - CHG: Reduced disk access in the status cache. (Stefan)
